# libsnark-tutorial

./: README.md
src/: CMakeLists.txt  test-gadget.cpp  test.cpp
